Minimal VM build is broken after JDK-8199868 (Support JNI critical functions in object pinning API)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b06

       class CollectedHeap;
             ^~~~~~~~~~~~~
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:2300:31: error: invalid use of incomplete type ‘class CollectedHeap’
                 if (Universe::heap()->supports_object_pinning()) {
                                     ^~
      In file included from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/oops/array.hpp:29:0,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/memory/universe.hpp:28,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/code/oopRecorder.hpp:28,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/asm/codeBuffer.hpp:28,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/asm/assembler.hpp:28,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/asm/macroAssembler.hpp:28,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:29:
      /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/memory/metaspace.hpp:64:7: note: forward declaration of ‘class CollectedHeap’
       class CollectedHeap;
             ^~~~~~~~~~~~~

            Assignee:
            Zhengyu Gu
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: