8208635: Minimal VM build is broken after JDK-8199868 (Support JNI critical functions in object pinning API)

Added missing header file

Reviewed-by: shade, gziemski